# workforce-analytics

./: .gitignore  README.md  main.py  pyproject.toml
docs/: report_mapping.md
notebooks/: 01_data_overview.ipynb  02_pipeline_and_quality.ipynb  03_movement_and_noise.ipynb  04_hr_and_hrv.ipynb  05_stress_and_fatigue.ipynb
src/fabenode_data_report/: data_loader.py  data_writer.py  datasets.py  diagnostics.py  main.py  preprocessing.py  risk_rules.py  time_features.py  validation.py  validation_utils.py
src/fabenode_data_report/config/: loader.py  params.yaml  schema.py
